Fix the wrapper width on mobile devices.

--- a/source/_assets/css/1024w.scss
+++ b/source/_assets/css/1024w.scss
@@ -7,6 +7,7 @@
 
   .wrapper {
     max-width: 88vw;
+    width: auto;
   }
 
   header {
